--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -3,7 +3,7 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=My Product List
+appTitle=My Product List 1
 
 #YDES: Application description
 appDescription=An SAP Fiori application for My Product List
