7th point 1 Change to App Title

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -3,7 +3,7 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=My Product List 7
+appTitle=My Product List 7.
 
 #YDES: Application description
 appDescription=An SAP Fiori application for My Product List
